@@ -2,6 +2,7 @@
 2018-07-18  Edward Hart <edward.dan.hart@gmail.com>
 
 	* typeck.c: added checks for (RE)WRITE FILE f FROM literal (bug #411).
+	* parser.y (file_control_entry): fixed regression caused when fixing bug #405.
 
 2018-07-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
